--- a/Tugas sesi 4 Operator.ipynb
+++ b/Tugas sesi 4 Operator.ipynb
@@ -298,84 +298,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 55,
    "id": "1a277035-90c6-43af-acbb-9729dcf92848",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukkan angka: 83\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lebih besar dari 100\n",
-      "Tidak lebih besar dari 100\n"
+      "Angka tidak lebih besar dari 100\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "isi nilai 12\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tidak Lulus\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "isi nilai 13\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tidak Lulus\n"
-     ]
-    }
-   ],
-   "source": [
-    "angka = 150\n",
-    "hasil = (\"Tidak lebih besar dari 100\", \"Lebih besar dari 100\")[angka > 100]\n",
-    "print(hasil)\n",
-    "\n",
-    "angka2 = 50\n",
-    "hasil2 = (\"Tidak lebih besar dari 100\", \"Lebih besar dari 100\")[angka2 > 100]\n",
-    "print(hasil2)\n",
-    "\n",
-    "nilai_ujian = int(input(\"isi nilai\"))\n",
-    "status = (\"Tidak Lulus\", \"Lulus\")[nilai_ujian > 70]\n",
-    "print(status)\n",
-    "\n",
-    "nilai_ujian2 = int(input(\"isi nilai\"))\n",
-    "status2 = (\"Tidak Lulus\", \"Lulus\")[nilai_ujian2 > 70]\n",
-    "print(status2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "id": "5f8657d0-d99a-4044-9985-c5eb2c0cd4e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lebih besar dari 100\n",
-      "Tidak lebih besar dari 100\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "isi nilai 98\n"
+      "Masukkan Nilai Ujian: 70\n"
      ]
     },
     {
@@ -384,38 +329,17 @@
      "text": [
       "Lulus\n"
      ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "isi nilai 12\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tidak Lulus\n"
-     ]
     }
    ],
    "source": [
-    "angka = 150\n",
-    "hasil = \"Lebih besar dari 100\" if angka > 100 else \"Tidak lebih besar dari 100\"\n",
+    "angka = int (input(\"Masukkan angka:\"))\n",
+    "hasil = \"Angka lebih besar dari 100\" if angka > 100 else \"Angka tidak lebih besar dari 100\"\n",
     "print(hasil)\n",
     "\n",
-    "angka2 = 50\n",
-    "hasil2 = \"Lebih besar dari 100\" if angka2 > 100 else \"Tidak lebih besar dari 100\"\n",
-    "print(hasil2)\n",
+    "nilaiUjian= int (input(\"Masukkan Nilai Ujian:\"))\n",
     "\n",
-    "nilai_ujian = int(input(\"isi nilai\"))\n",
-    "status = \"Lulus\" if nilai_ujian > 70 else \"Tidak Lulus\"\n",
-    "print(status)\n",
-    "\n",
-    "nilai_ujian2 = int(input(\"isi nilai\"))\n",
-    "status2 = \"Lulus\" if nilai_ujian2 > 70 else \"Tidak Lulus\"\n",
-    "print(status2)"
+    "kelulusan = \"Lulus\" if angka > 70 else \"Tidak lulus\" \n",
+    "print(kelulusan)"
    ]
   }
  ],
