--- a/Tugas 6 IOString.ipynb
+++ b/Tugas 6 IOString.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "6b33ba9a-95f8-4cd9-ae4b-2b87c52520d6",
    "metadata": {},
    "outputs": [
@@ -25,8 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selamat datang, Nanda!. Silahkan untuk mengisi biodata Anda!\n",
-      "--------------------------------------------------------------\n"
+      "Selamat datang, Nanda!. Silahkan untuk mengisi biodata Anda!\n"
      ]
     },
     {
@@ -35,7 +34,7 @@
      "text": [
       "Isikan Nama Lengkap                    : Nanda Sawaliah\n",
       "Isikan Tempat Lahir                    : Cibadak\n",
-      "Isikan Tanggal Lahir                   : 10 November 2002\n",
+      "Isikan Tanggal Lahir                   : 20 Mei 2003\n",
       "Isikan Jenis Kelamin                   : Perempuan\n",
       "Isikan Alamat                          : Nagrak\n",
       "Isikan Status Mahasiswa (Aktif/Alumni) : Aktif\n",
@@ -48,9 +47,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "---------- Biodata Sederhana ----------\n",
+      "------------------- Biodata Sederhana -------------------\n",
       "Nama Lengkap                    : Nanda Sawaliah\n",
-      "Tempat, Tanggal Lahir           : Cibadak, 10 November 2002\n",
+      "Tempat, Tanggal Lahir           : Cibadak, 20 Mei 2003\n",
       "Jenis Kelamin                   : Perempuan\n",
       "Alamat                          : Nagrak\n",
       "Status Mahasiswa (Aktif/Alumni) : Aktif\n",
@@ -62,7 +61,6 @@
    "source": [
     "name = input (\"Isikan Nama Anda:\")\n",
     "print (\"Selamat datang,\", name + \"!.\", \"Silahkan untuk mengisi biodata Anda!\")\n",
-    "print (\"--------------------------------------------------------------\")\n",
     "lengkapNama = input(\"Isikan Nama Lengkap                    :\")\n",
     "tempatLahir = input(\"Isikan Tempat Lahir                    :\")\n",
     "tanggalLahir = input(\"Isikan Tanggal Lahir                   :\")\n",
@@ -72,7 +70,7 @@
     "univ = input(\"Isikan Nama Universitas                :\")\n",
     "jurusan = input(\"Isikan Jurusan Anda                    :\")\n",
     "\n",
-    "print (\"\\n---------- Biodata Sederhana ----------\")\n",
+    "print (\"\\n------------------- Biodata Sederhana -------------------\")\n",
     "print (\"Nama Lengkap                    : {}\".format (lengkapNama))\n",
     "print (\"Tempat, Tanggal Lahir           : {}, {}\".format(tempatLahir,tanggalLahir))\n",
     "print (\"Jenis Kelamin                   : {}\".format (gender))\n",
