Update Tugas 6_Nanda Sawaliah_20240040097.ipynb

--- a/Tugas 6_Nanda Sawaliah_20240040097.ipynb
+++ b/Tugas 6_Nanda Sawaliah_20240040097.ipynb
@@ -566,7 +566,7 @@
     "<li>ketika seseorang mendapatkan nilai dibawah 60 maka peserta tersebut mendapatkan hasil tes GAGAL.</li>\n",
     "</ol>\n",
     "\n",
-    "Sedangkan untuk penilaian interview adalah\n",
+    "<h4>Sedangkan untuk penilaian interview adalah\n",
     "<ol>\n",
     "<li>ketika nilai yang diberikan kepada seseorang tersebut adalah \"A\" atau \"B\" maka peserta tersebut dianggap LOLOS interview</li>\n",
     "\n",
