Update Tugas 6_Nanda Sawaliah_20240040097.ipynb

--- a/Tugas 6_Nanda Sawaliah_20240040097.ipynb
+++ b/Tugas 6_Nanda Sawaliah_20240040097.ipynb
@@ -258,7 +258,9 @@
    ],
    "source": [
     "nilaiRapor = int(input(\"Masukan Nilai Rapor:\"))\n",
+    "print (\"Nilai Rapor Anda:\", nilaiRapor)\n",
     "penghasilanOrTu = int(input(\"Masukan Penghasilan Orang Tua:\"))\n",
+    "print (\"Penghasilan Orang Tua Anda:\", penghasilanOrTu)\n",
     "\n",
     "if nilaiRapor >= 90 and penghasilanOrTu < 5000000:\n",
     "    print(\"Selamat Anda Mendapat Beasiswa Penuh\")\n",
@@ -573,7 +575,7 @@
     "<li>selain kedua nilai tersebut maka peserta dianggap GAGAL tes interview.</li>\n",
     "</ol>\n",
     "\n",
-    "Ketika calon programmer mendapatkan nilai coding LOLOS atau DIPERTIMBANGKAN dan juga LOLOS test interview maka tampilkanlah pesan \"Selamat Kamu Berhasil Menjadi Calon Programmer\". Jika tidak maka tampilkanlah pesan \"Maaf Kamu Belum Berhasil Menjadi Calon Programmer\""
+    "<h4>Ketika calon programmer mendapatkan nilai coding LOLOS atau DIPERTIMBANGKAN dan juga LOLOS test interview maka tampilkanlah pesan \"Selamat Kamu Berhasil Menjadi Calon Programmer\". Jika tidak maka tampilkanlah pesan \"Maaf Kamu Belum Berhasil Menjadi Calon Programmer\""
    ]
   },
   {
