--- a/Tugas 10 Nanda Sawaliah.ipynb
+++ b/Tugas 10 Nanda Sawaliah.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "<b>Project Data Pengunjung Wahana</b><br>\n",
-    "Sampel 1000 data pengunjung wahana, beragam memiliki 10 kolom:<br>\n",
+    "Sampel 1000 data pengunjung wahana dengan 10 parameter<br>\n",
     "<ol>\n",
     "    <li>Usia : 10 - 59</li>\n",
     "    <li>Gender : L / P</li>\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "e32a800e-d48b-4de1-a6fb-9d36dcbac2c0",
    "metadata": {},
    "outputs": [
@@ -51,28 +51,28 @@
       "None\n",
       "Usia pengunjung termuda: 10\n",
       "Usia pengunjung tertua: 59\n",
-      "Jumlah pengunjung laki-laki: 492.0\n",
-      "Jumlah pengunjung perempuan: 508.0\n",
-      "Jumlah pengunjung Roller Coaster: 258.0\n",
-      "Jumlah pengunjung Bianglala     : 242.0\n",
-      "Jumlah pengunjung Rumah Hantu   : 255.0\n",
-      "Jumlah pengunjung Kora-kora     : 245.0\n",
-      "Jumlah pengunjung dari Jakarta   : 232.0\n",
-      "Jumlah pengunjung dari Bandung   : 246.0\n",
-      "Jumlah pengunjung dari Surabaya  : 266.0\n",
-      "Jumlah pengunjung dari Yogyakarta: 256.0\n",
-      "Jumlah pemegang tiket VIP    : 352.0\n",
-      "Jumlah pemegang tiket Reguler: 317.0\n",
-      "Jumlah pemegang tiket Promo  : 331.0\n",
-      "Jumlah pengunjung di sore hari: 262.0\n",
-      "Jumlah pengunjung saat cuaca cerah: 328.0\n",
-      "Jumlah antrian panjang: 325.0\n",
-      "Jumlah pembayaran dengan Cash        : 327.0\n",
-      "Jumlah pembayaran dengan E-Money     : 340.0\n",
-      "Jumlah pembayaran dengan Kartu Kredit: 333.0\n",
-      "Jumlah pengunjung puas      : 327.0\n",
-      "Jumlah pengunjung tidak puas: 328.0\n",
-      "Jumlah pengunjung cukup     : 345.0\n"
+      "Jumlah pengunjung laki-laki: 524.0\n",
+      "Jumlah pengunjung perempuan: 476.0\n",
+      "Jumlah pengunjung Roller Coaster: 220.0\n",
+      "Jumlah pengunjung Bianglala     : 268.0\n",
+      "Jumlah pengunjung Rumah Hantu   : 241.0\n",
+      "Jumlah pengunjung Kora-kora     : 271.0\n",
+      "Jumlah pengunjung dari Jakarta   : 243.0\n",
+      "Jumlah pengunjung dari Bandung   : 235.0\n",
+      "Jumlah pengunjung dari Surabaya  : 261.0\n",
+      "Jumlah pengunjung dari Yogyakarta: 261.0\n",
+      "Jumlah pemegang tiket VIP    : 327.0\n",
+      "Jumlah pemegang tiket Reguler: 339.0\n",
+      "Jumlah pemegang tiket Promo  : 334.0\n",
+      "Jumlah pengunjung di sore hari: 255.0\n",
+      "Jumlah pengunjung saat cuaca cerah: 343.0\n",
+      "Jumlah antrian panjang: 345.0\n",
+      "Jumlah pembayaran dengan Cash        : 345.0\n",
+      "Jumlah pembayaran dengan E-Money     : 317.0\n",
+      "Jumlah pembayaran dengan Kartu Kredit: 338.0\n",
+      "Jumlah pengunjung puas      : 317.0\n",
+      "Jumlah pengunjung tidak puas: 354.0\n",
+      "Jumlah pengunjung cukup     : 329.0\n"
      ]
     }
    ],
@@ -125,21 +125,21 @@
     "print(f\"Jumlah pengunjung Rumah Hantu   : {rh.size / 10}\")\n",
     "print(f\"Jumlah pengunjung Kora-kora     : {kk.size / 10}\")\n",
     "\n",
-    "jkt = df[df['Asal Kota'] == 'Jakarta']\n",
-    "bdg = df[df['Asal Kota'] == 'Bandung']\n",
-    "sby = df[df['Asal Kota'] == 'Surabaya']\n",
-    "yog = df[df['Asal Kota'] == 'Yogyakarta']\n",
-    "print(f\"Jumlah pengunjung dari Jakarta   : {jkt.size / 10}\")\n",
-    "print(f\"Jumlah pengunjung dari Bandung   : {bdg.size / 10}\")\n",
-    "print(f\"Jumlah pengunjung dari Surabaya  : {sby.size / 10}\")\n",
-    "print(f\"Jumlah pengunjung dari Yogyakarta: {yog.size / 10}\")\n",
+    "jakarta = df[df['Asal Kota'] == 'Jakarta']\n",
+    "bandung = df[df['Asal Kota'] == 'Bandung']\n",
+    "surabaya = df[df['Asal Kota'] == 'Surabaya']\n",
+    "yogyakarta = df[df['Asal Kota'] == 'Yogyakarta']\n",
+    "print(f\"Jumlah pengunjung dari Jakarta   : {jakarta.size / 10}\")\n",
+    "print(f\"Jumlah pengunjung dari Bandung   : {bandung.size / 10}\")\n",
+    "print(f\"Jumlah pengunjung dari Surabaya  : {surabaya.size / 10}\")\n",
+    "print(f\"Jumlah pengunjung dari Yogyakarta: {yogyakarta.size / 10}\")\n",
     "\n",
     "vip = df[df['Jenis Tiket'] == 'VIP']\n",
-    "reg = df[df['Jenis Tiket'] == 'Reguler']\n",
-    "pro = df[df['Jenis Tiket'] == 'Promo']\n",
+    "reguler = df[df['Jenis Tiket'] == 'Reguler']\n",
+    "promo = df[df['Jenis Tiket'] == 'Promo']\n",
     "print(f\"Jumlah pemegang tiket VIP    : {vip.size / 10}\")\n",
-    "print(f\"Jumlah pemegang tiket Reguler: {reg.size / 10}\")\n",
-    "print(f\"Jumlah pemegang tiket Promo  : {pro.size / 10}\")\n",
+    "print(f\"Jumlah pemegang tiket Reguler: {reguler.size / 10}\")\n",
+    "print(f\"Jumlah pemegang tiket Promo  : {promo.size / 10}\")\n",
     "\n",
     "sore = df[df['Waktu Kunjungan'] == 'Sore']\n",
     "print(f\"Jumlah pengunjung di sore hari: {sore.size / 10}\")\n",
