--- a/Analisis/analisis.ipynb
+++ b/Analisis/analisis.ipynb
@@ -743,7 +743,7 @@
     "plt.title(\"Distribusi Responden Berdasarkan Pekerjaan\")\n",
     "plt.xlabel (\"Jenis Pekerjaan\")\n",
     "plt.ylabel (\"Jumlah\")\n",
-    "plt.tight_layout()# untuk mengatur tata letak\n",
+    "plt.tight_layout() # untuk mengatur tata letak\n",
     "plt.show()"
    ]
   },
@@ -995,7 +995,6 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Cetak hasil\n",
     "print(f\"Persamaan Regresi: y = {m:.2f}x + {b:.2f}\")\n",
     "print(f\"Nilai R²: {r_squared:.4f}\")"
    ]
@@ -1031,18 +1030,18 @@
     "from sklearn.metrics import r2_score  # Import metrik R-squared\n",
     "\n",
     "X = ds['Sleep Duration'].values.reshape(-1, 1)  # Variabel independen harus 2D\n",
-    "y = ds['Quality of Sleep']  # Target/variabel dependen\n",
-    "model = LinearRegression()  # Membuat objek model\n",
+    "y = ds['Quality of Sleep']",
+    "model = LinearRegression()",
     "model.fit(X, y)  # Melatih model\n",
     "\n",
     "# Prediksi dan evaluasi\n",
-    "y_pred = model.predict(X)  # Prediksi nilai y berdasarkan X\n",
-    "r2 = r2_score(y, y_pred)  # Menghitung akurasi model dengan R²\n",
+    "y_pred = model.predict(X)",
+    "r2 = r2_score(y, y_pred)",
     "\n",
     "# Visualisasi hasil regresi sklearn\n",
     "plt.figure(figsize=(10, 6))\n",
-    "sns.scatterplot(x=ds['Sleep Duration'], y=ds['Quality of Sleep'], label='Data Asli')  # Titik data\n",
-    "plt.plot(ds['Sleep Duration'], y_pred, color='green', label='Garis Regresi')  # Garis regresi\n",
+    "sns.scatterplot(x=ds['Sleep Duration'], y=ds['Quality of Sleep'], label='Data Asli')",
+    "plt.plot(ds['Sleep Duration'], y_pred, color='green', label='Garis Regresi')",
     "plt.xlabel('Durasi Tidur')\n",
     "plt.ylabel('Kualitas Tidur')\n",
     "plt.title('Regresi Linier: Durasi tidur vs Kualitas Tidur')\n",
@@ -1050,7 +1049,6 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Cetak nilai R-squared\n",
     "print(f\"Nilai R²: {r2:.3f}\")  # Menampilkan nilai akurasi regresi"
    ]
   },
@@ -1080,19 +1078,19 @@
    ],
    "source": [
     "# Regresi linier menggunakan model sklearn antara aktifitas fisik dan quality of sleeep\n",
-    "X = ds['Physical Activity Level'].values.reshape(-1, 1)  # Variabel independen harus 2D\n",
-    "y = ds['Quality of Sleep']  # Target/variabel dependen\n",
-    "model = LinearRegression()  # Membuat objek model\n",
-    "model.fit(X, y)  # Melatih model\n",
+    "X = ds['Physical Activity Level'].values.reshape(-1, 1)",
+    "y = ds['Quality of Sleep']",
+    "model = LinearRegression()",
+    "model.fit(X, y)",
     "\n",
     "# Prediksi dan evaluasi\n",
-    "y_pred = model.predict(X)  # Prediksi nilai y berdasarkan X\n",
-    "r2 = r2_score(y, y_pred)  # Menghitung akurasi model dengan R²\n",
+    "y_pred = model.predict(X)",
+    "r2 = r2_score(y, y_pred)",
     "\n",
     "# Visualisasi hasil regresi sklearn\n",
     "plt.figure(figsize=(10, 6))\n",
-    "sns.scatterplot(x=ds['Physical Activity Level'], y=ds['Quality of Sleep'], label='Data Asli')  # Titik data\n",
-    "plt.plot(ds['Physical Activity Level'], y_pred, color='pINK', label='Garis Regresi')  # Garis regresi\n",
+    "sns.scatterplot(x=ds['Physical Activity Level'], y=ds['Quality of Sleep'], label='Data Asli')",
+    "plt.plot(ds['Physical Activity Level'], y_pred, color='pINK', label='Garis Regresi')",
     "plt.xlabel('Aktivitas Fisik')\n",
     "plt.ylabel('Kualitas Tidur')\n",
     "plt.title('Regresi Linier: Aktivitas Fisik vs Kualitas Tidur')\n",
@@ -1100,8 +1098,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Cetak nilai R-squared\n",
-    "print(f\"Nilai R²: {r2:.3f}\")  # Menampilkan nilai akurasi regresi"
+    "print(f\"Nilai R²: {r2:.3f}\")"
    ]
   },
   {
@@ -1131,19 +1128,19 @@
    "source": [
     "# Regresi linier menggunakan model sklearn antara daily steps dan quality of sleeep\n",
     "\n",
-    "X = ds['Daily Steps'].values.reshape(-1, 1)  # Variabel independen harus 2D\n",
-    "y = ds['Quality of Sleep']  # Target/variabel dependen\n",
-    "model = LinearRegression()  # Membuat objek model\n",
-    "model.fit(X, y)  # Melatih model\n",
+    "X = ds['Daily Steps'].values.reshape(-1, 1)",
+    "y = ds['Quality of Sleep']",
+    "model = LinearRegression()",
+    "model.fit(X, y)",
     "\n",
     "# Prediksi dan evaluasi\n",
-    "y_pred = model.predict(X)  # Prediksi nilai y berdasarkan X\n",
-    "r2 = r2_score(y, y_pred)  # Menghitung akurasi model dengan R²\n",
+    "y_pred = model.predict(X)",
+    "r2 = r2_score(y, y_pred)",
     "\n",
     "# Visualisasi hasil regresi sklearn\n",
     "plt.figure(figsize=(10, 6))\n",
-    "sns.scatterplot(x=ds['Daily Steps'], y=ds['Quality of Sleep'], label='Data Asli', color = 'Green')  # Titik data\n",
-    "plt.plot(ds['Daily Steps'], y_pred, color='blue', label='Garis Regresi')  # Garis regresi\n",
+    "sns.scatterplot(x=ds['Daily Steps'], y=ds['Quality of Sleep'], label='Data Asli', color = 'Green')\n",
+    "plt.plot(ds['Daily Steps'], y_pred, color='blue', label='Garis Regresi')\n",
     "plt.xlabel('Langkah Harian')\n",
     "plt.ylabel('Kualitas Tidur')\n",
     "plt.title('Regresi Linier: Langkah Harian vs Kualitas Tidur')\n",
@@ -1351,19 +1348,19 @@
    "source": [
     "# Regresi linier menggunakan model sklearn antara daily steps dan quality of sleeep\n",
     "\n",
-    "X = ds['Heart Rate'].values.reshape(-1, 1)  # Variabel independen harus 2D\n",
-    "y = ds['Quality of Sleep']  # Target/variabel dependen\n",
-    "model = LinearRegression()  # Membuat objek model\n",
-    "model.fit(X, y)  # Melatih model\n",
+    "X = ds['Heart Rate'].values.reshape(-1, 1)",
+    "y = ds['Quality of Sleep']",
+    "model = LinearRegression()",
+    "model.fit(X, y)",
     "\n",
     "# Prediksi dan evaluasi\n",
-    "y_pred = model.predict(X)  # Prediksi nilai y berdasarkan X\n",
-    "r2 = r2_score(y, y_pred)  # Menghitung akurasi model dengan R²\n",
+    "y_pred = model.predict(X)",
+    "r2 = r2_score(y, y_pred)",
     "\n",
     "# Visualisasi hasil regresi sklearn\n",
     "plt.figure(figsize=(10, 6))\n",
-    "sns.scatterplot(x=ds['Heart Rate'], y=ds['Quality of Sleep'], label='Data Asli', color = 'Green')  # Titik data\n",
-    "plt.plot(ds['Heart Rate'], y_pred, color='blue', label='Garis Regresi')  # Garis regresi\n",
+    "sns.scatterplot(x=ds['Heart Rate'], y=ds['Quality of Sleep'], label='Data Asli', color = 'Green')",
+    "plt.plot(ds['Heart Rate'], y_pred, color='blue', label='Garis Regresi')",
     "plt.xlabel('Denyut jantung')\n",
     "plt.ylabel('Kualitas Tidur')\n",
     "plt.title('Regresi Linier: Denyut Jantung vs Kualitas Tidur')\n",
@@ -1371,7 +1368,6 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Nilai R² menunjukkan seberapa baik model regresi menjelaskan variasi data\n",
     "print(f\"Nilai R²: {r2:.3f}\")  # Menampilkan nilai akurasi regresi"
    ]
   }
